[gd_scene load_steps=4 format=3 uid="uid://cna7bmd25yaqu"]

[ext_resource type="Script" uid="uid://br3f6ejy3gpe3" path="res://Scripts/CardHold.gd" id="1_wloms"]
[ext_resource type="Texture2D" uid="uid://wxwd1fdem2v8" path="res://Assets/Placeholder/Art/wind_v2.png" id="2_0cbre"]
[ext_resource type="FontFile" uid="uid://dto0eefvqas4a" path="res://Assets/Placeholder/Fonts/munro.ttf" id="3_thqwl"]

[node name="Card" type="Container"]
custom_minimum_size = Vector2(105, 136)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wloms")

[node name="Card_Back" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_0cbre")

[node name="Card_Effect" type="RichTextLabel" parent="."]
texture_filter = 4
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_thqwl")
theme_override_font_sizes/normal_font_size = 50
text = "placeholder text ... ................................................................................................................"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="Card_Back" to="." method="_on_card_back_mouse_entered"]
[connection signal="mouse_exited" from="Card_Back" to="." method="_on_card_back_mouse_exited"]
